--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
 * text=auto !eol
 l3experimental/xcoffins/elementare-typographie-title.jpg -text svneol=unset#image/jpeg
 l3kernel/expl3-datatype-analysis.xlsx -text
+l3kernel/testfiles/m3char001.luatex.tlg -text
 xpackages/galley/make.bat -text
 xpackages/make.bat -text
 xpackages/xcontents/Makefile -text
