Add installation of TL to Travis script

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,7 @@
-addons:
-  apt:
-    packages:
-    - texlive
+before_install:
+ - . sh ./texlive.sh
 
 install: true
 
 script:
- - texlua build.lua check -e pdftex -H
+ - texlua build.lua check -H
