Export path for TL for Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ before_install:
 install: true
 
 script:
- - texlua build.lua check -H
+ - export PATH=/tmp/texlive/bin/x86_64-linux:$PATH && texlua build.lua check -H
