--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,12 @@ install: true
 
 script:
  - export PATH=/tmp/texlive/bin/x86_64-linux:$PATH && texlua build.lua check -H
+
+notifications:
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/4dd3d371c10f780ad0e0
+    on_success: change  # options: [always|never|change] default: always
+    on_failure: always  # options: [always|never|change] default: always
+    on_start: never     # options: [always|never|change] default: always
+
