Move CI deps to "install" line
This may or may not work, but seems to be the model for
setting up caching.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,5 @@
-before_install:
+install:
  - sh ./texlive.sh
-
-install: true
 
 script:
  - export PATH=/tmp/texlive/bin/x86_64-linux:$PATH && texlua build.lua check -H
