Test CI caching
If this works then it will need to be disabled whenever additional
contrib material is added to the test rig. I'll add some notes on
that once the position is clear.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 install:
  - sh ./texlive.sh
 
+cache:
+  directories:
+    - /tmp/texlive
+
 script:
  - export PATH=/tmp/texlive/bin/x86_64-linux:$PATH && texlua build.lua check -H
 
