Cache TL settings/fonts/etc.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ install:
 cache:
   directories:
     - /tmp/texlive
+    - $HOME/$TLSETTTINGS
 
 script:
  - export PATH=/tmp/texlive/bin/x86_64-linux:$PATH && texlua build.lua check -H
