--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ install:
 cache:
   directories:
     - /tmp/texlive
-    - $HOME/$TLSETTTINGS
+    - $HOME/$TLSETTINGS
 
 script:
  - export PATH=/tmp/texlive/bin/x86_64-linux:$PATH && texlua build.lua check -H
