Seems best to code in settings location
Reading the Travis docs, this will apply to any pull requests,
etc., whereas setting from the GUI won't.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ install:
 cache:
   directories:
     - /tmp/texlive
-    - $HOME/$TLSETTINGS
+    - $HOME/.texlive2015
 
 script:
  - export PATH=/tmp/texlive/bin/x86_64-linux:$PATH && texlua build.lua check -H
