Set TL path only once

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 install:
- - sh ./support/texlive.sh
+ - source ./support/texlive.sh
 
 cache:
   directories:
@@ -7,7 +7,7 @@ cache:
     - $HOME/.texlive2015
 
 script:
- - export PATH=/tmp/texlive/bin/x86_64-linux:$PATH && texlua build.lua check -H
+ - texlua build.lua check -H
 
 notifications:
   email:
