Rename lazy boolean predicates, add conditionals
This only affects candidate functions.  The predicates \bool_all_p:n,
\bool_and_p:nn, \bool_any_p:n and \bool_or_p:nn are renamed by replacing
"bool" by "bool_lazy".  The corresponding conditionals are also added for
completeness.  Tests for all these functions are moved to a new testfile.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
 * text=auto !eol
 l3experimental/xcoffins/elementare-typographie-title.jpg -text svneol=unset#image/jpeg
 l3kernel/expl3-datatype-analysis.xlsx -text
+l3kernel/testfiles/m3prg005.lvt -text
+l3kernel/testfiles/m3prg005.tlg -text
