Use -q option when running Travis-CI
There's no need to report DocStrip data here

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ cache:
     - $HOME/.texlive2015
 
 script:
- - texlua build.lua check -H
+ - texlua build.lua check -q -H
 
 notifications:
   email:
