Better approach to .gitignore and PDF files [ci skip]

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,11 @@
 build/*
+
 *.fmt
 *.zip
-l3*.pdf
-l3experimental/xcoffins/*.pdf
-l3experimental/xgalley/*.pdf
-l3kernel/*.pdf
-l3packages/xfrac/*.pdf
-l3packages/xparse/*.pdf
-l3packages/xtemplate/*.pdf
-l3trial/xbox/*.pdf
-l3trial/xfont/*.pdf
+
+*.pdf
+!*/testfiles/*.pdf
+
 xpackages/xfrontm/*.aux
 xpackages/xfrontm/*.bbl
 xpackages/xfrontm/*.idx
