Remove year from TL structures (Travis-CI)
This means we don't have to update the files for TL
version, just clear the Travis-CI cache.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ install:
 cache:
   directories:
     - /tmp/texlive
-    - $HOME/.texlive2015
+    - $HOME/.texlive
 
 script:
  - texlua build.lua check -q -H
