--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ xpackages/xfrontm/*.lof
 xpackages/xfrontm/*.log
 xpackages/xfrontm/*.lot
 xpackages/xfrontm/*.toc
+!l3trial/l3deprecation/*.fmt
+!l3trial/l3deprecation/*.zip
+!l3trial/l3deprecation/*.pdf
