Add new "fpu" package
The name is probably not stable yet, but hopefully the core idea
is. Documentation is largely a copy-paste from l3fp.dtx but with
'not yet' stuff, etc., removed.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,6 @@
 * text=auto !eol
 l3experimental/xcoffins/elementare-typographie-title.jpg -text svneol=unset#image/jpeg
 l3kernel/expl3-datatype-analysis.xlsx -text
+l3packages/fpu/build.lua -text
+l3packages/fpu/fpu.dtx -text
+l3packages/fpu/fpu.ins -text
