--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ xpackages/xfrontm/*.lof
 xpackages/xfrontm/*.log
 xpackages/xfrontm/*.lot
 xpackages/xfrontm/*.toc
+!l3packages/fpu/testfiles/*.fmt
+!l3packages/fpu/testfiles/*.zip
+!l3packages/fpu/testfiles/*.pdf
