--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ xpackages/xfrontm/*.toc
 !l3packages/fpu/testfiles/*.fmt
 !l3packages/fpu/testfiles/*.zip
 !l3packages/fpu/testfiles/*.pdf
+!l3trial/l3benchmark/testfiles/*.fmt
+!l3trial/l3benchmark/testfiles/*.zip
+!l3trial/l3benchmark/testfiles/*.pdf
