--- a/support/regression-test.cfg
+++ b/support/regression-test.cfg
@@ -1,6 +1,9 @@
 % Customise the \cs{START} message:
 \def\STARTMESSAGE{This is a generated file for the LaTeX (2e + expl3) validation system.}
 
+% Some custom commands
+\def\AUTHOR#1{\LONGTYPEOUT{Author: #1}}
+
 % We allocate a large number of registers now: this number
 % can be changed to keep register numbers stable in test logs.
 
