--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@ xpackages/xfrontm/*.toc
 !l3trial/l3benchmark/testfiles/*.fmt
 !l3trial/l3benchmark/testfiles/*.zip
 !l3trial/l3benchmark/testfiles/*.pdf
+!l3trial/xfont/testfiles/*.fmt
+!l3trial/xfont/testfiles/*.zip
+!l3trial/xfont/testfiles/*.pdf
