Set up parallel doc target test

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,10 @@ cache:
     - /tmp/texlive
     - $HOME/.texlive
 
-script:
- - texlua build.lua check -q -H
+jobs:
+  include:
+    - script: l3build check -q -H
+    - script: l3build doc -q -H
 
 notifications:
   email:
