make travis more pretty

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,9 @@ cache:
 jobs:
   include:
     - script: l3build check -q -H
+      name: "Test suite"
     - script: l3build doc -q -H
+      name: "Documentation"
 
 notifications:
   email:
