--- a/.gitignore
+++ b/.gitignore
@@ -5,22 +5,18 @@ build/*
 
 *.pdf
 !*/testfiles/*.pdf
+!/discussionpapers/*.pdf
 
-xpackages/xfrontm/*.aux
-xpackages/xfrontm/*.bbl
-xpackages/xfrontm/*.idx
-xpackages/xfrontm/*.ilg
-xpackages/xfrontm/*.ind
-xpackages/xfrontm/*.lof
-xpackages/xfrontm/*.log
-xpackages/xfrontm/*.lot
-xpackages/xfrontm/*.toc
 *.*~
-*.toc
+
 *.aux
-*.log
-*.gz
+*.bbl
 *.glo
+*.gz
 *.hd
 *.idx
+*.ilg
+*.ind
+*.log
 *.out
+*.toc
