Show log on error failures in Travis-CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ cache:
 
 jobs:
   include:
-    - script: l3build check -q -H
+    - script: l3build check -q -H --show-log-on-error
       name: "Test suite"
     - script: l3build doc -q -H
       name: "Documentation"
