Enable  full CTAN build for tags

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,15 @@ cache:
 
 jobs:
   include:
-    - script: l3build check -q -H --show-log-on-error
+    - if: NOT tag IS present
+      script: l3build check -q -H --show-log-on-error
       name: "Test suite"
-    - script: l3build doc -q -H
+    - if: NOT tag IS present
+      script: l3build doc -q -H
       name: "Documentation"
+    - if: tag IS present
+      script: l3build ctan -H --show-log-on-error
+      name: "Full CTAN build"
 
 notifications:
   email:
