Restrict commit emails to latex3/latex3

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ jobs:
 
 notifications:
   email:
+    if: repo = latex3/latex3
     recipients:
       - latex3-commits@tug.org
     on_success: change
