--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+os: linux
+dist: xenial
+
 install:
  - source ./support/texlive.sh
 
@@ -25,7 +28,6 @@ notifications:
       - latex3-commits@tug.org
     on_success: change
     on_failure: always
-    on_start:   never
 
 deploy:
   - provider: releases
@@ -34,7 +36,6 @@ deploy:
     file_glob: true
     file:
       - ./*.zip
-    skip_cleanup: true
     on:
       tags: true
     prerelease: false
