--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -62,66 +62,9 @@ jobs:
       - name: Install TeX Live
         uses: zauguin/install-texlive@v1
         with:
-          # The following list can be altered to change which TeX Live packages to install.
-          # (Technically no YAML comments can appear in there but all lines starting with #
-          # get removed)
-          # There is no technical reason to list every package on a new line, this is only
-          # done for readablity and diff-friendliness.
-          packages: |
-            # The test framework itself
-            l3build
-            #
-            # Required to build plain and LaTeX formats including (u)pLaTeX
-            latex-bin
-            luahbtex
-            platex
-            uplatex
-            tex
-            xetex
-            #
-            # Then get the rest of required LaTeX
-            amsmath
-            tools
-            #
-            # Assuming a 'basic' font set up, metafont is required to avoid
-            # warnings with some packages and errors with others
-            metafont
-            mfware
-            #
-            # Dependencies for tests that are not auto-resolved
-            bibtex
-            lualatex-math
-            #
-            # For the doc target and testing l3doc
-            alphalph
-            amsfonts
-            bookmark
-            booktabs
-            catchfile
-            colortbl
-            csquotes
-            dvips
-            ec
-            enumitem
-            epstopdf
-            epstopdf-pkg
-            everysel
-            fancyvrb
-            hologo
-            hyperref
-            lipsum
-            listings
-            makeindex
-            mathpazo
-            metalogo
-            oberdiek
-            pgf
-            psnfss
-            ragged2e
-            siunitx
-            times
-            underscore
-            units
+          # List the required TeX Live packages in a separate file to allow reuse in
+          # different workflows.
+          package_file: .github/tl_packages
       - name: Run l3build
         run: ${{ matrix.l3build_cmd }}
       # Now we create the artifacts: There are two cases where this happens.
