Add environment to allow making releases subject to verification

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,6 +12,7 @@ jobs:
   release:
     runs-on: ubuntu-20.04
     name: Build release
+    environment: Release
     steps:
       # Boilerplate
       - name: Checkout repository
